--- a/Révision - Kmeans from scratch.ipynb
+++ b/Révision - Kmeans from scratch.ipynb
@@ -2,18 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import scipy \n",
+    "np.set_printoptions(edgeitems=10)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +121,7 @@
        "[1000 rows x 2 columns]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,16 +133,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.PathCollection at 0x1b81d51c188>"
+       "<matplotlib.collections.PathCollection at 0x26f4ea71348>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -163,79 +165,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Structure :\n",
+    "def determine_C_movement(decimals):\n",
+    "    a = np.round(centroid_positions, decimals)\n",
+    "    b = np.round(for_comparison, decimals)   \n",
+    "    return np.array_equal(a, b)\n",
     "\n",
-    "def KMeans_scratch(data, k, scaler=\"StandardScaler\", metric=\"l2\"):\n",
-    "    \n",
-    "    # option standard scaler\n",
-    "    if standardize :\n",
-    "        from sklearn.preprocessing import StandardScaler\n",
-    "        data = StandardScaler().fit_transform(data)\n",
-    "    else:\n",
-    "        print (\"'Non-scaled' non pris en charge. Veuillez choisir : scaler='StandardScaler'\")\n",
-    "        \n",
-    "    # initial cluster positions = 2 first points of data\n",
-    "    centroid_positions_old = np.vstack([data[k,:] for k in range(k)])\n",
-    "    \n",
-    "    # initial distances = 0\n",
-    "    distances_array = np.zeros(data.shape[0], k)\n",
-    "    \n",
-    "    # initial movement\n",
-    "    C_movement = True \n",
-    "    \n",
-    "    while C_movement:\n",
-    "                \n",
-    "        # Calcul des distances : OK     \n",
-    "        distances_array = measure_distances() # utilise centroid_positions_old\n",
-    "    \n",
-    "        # Labeliser les points : -----\n",
-    "        assign_centroids()\n",
-    "        \n",
-    "        # calculer les positions des barycentres = nouveaux centroïdes : -----\n",
-    "        centroid_positions_new = calculate_new_positions()\n",
-    "        \n",
-    "        # update C_movement variable : -----\n",
-    "        C_movement = determine_C_movement()\n",
-    "        \n",
-    "        return C_coord, labels"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def determine_C_movement(centroid_positions_old, centroid_positions_new):\n",
-    "    return # Boolean: True=bougent False=statiques"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 101,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "could not broadcast input array from shape (1000,2) into shape (1000)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-101-cbeb76d28321>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;31m#         for point in col\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     23\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 24\u001b[1;33m \u001b[0mmeasure_distances\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-101-cbeb76d28321>\u001b[0m in \u001b[0;36mmeasure_distances\u001b[1;34m()\u001b[0m\n\u001b[0;32m     12\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0mmetric\u001b[0m \u001b[1;33m==\u001b[0m \u001b[1;34m\"l2\"\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m             \u001b[1;31m# calcualte Euclidean d\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m             \u001b[0mdistances_array\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0midx_centroid\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mdata\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mcentroid_positions_old\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0midx_centroid\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m         \u001b[1;32melse\u001b[0m \u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (1000,2) into shape (1000)"
-     ]
-    }
-   ],
-   "source": [
-    "k = 2\n",
-    "distances_array = np.zeros((data.shape[0], k))\n",
-    "metric = \"l2\"\n",
+    "# determine_C_movement(3)\n",
+    "\n",
     "def measure_distances():\n",
     "#     from numpy import linalg as LA\n",
     "    \n",
@@ -246,282 +186,113 @@
     "\n",
     "        if metric == \"l2\":\n",
     "            # calcualte Euclidean d\n",
-    "            distances_array = data - centroid_positions_old[idx_centroid,:]\n",
+    "            dist = np.power(np.sum((data - centroid_positions[idx_centroid,:])**k, axis=1), 1/k)\n",
+    "            distances_array[:,idx_centroid] = dist\n",
     "            \n",
     "        else :\n",
     "            # calculate Manhatan d\n",
     "            print(\"Métrique manhattan non prise en charge. Veuillez choisir : metric = 'l2'\")\n",
     "                          \n",
     "    return distances_array\n",
-    "            \n",
-    "#         for point in col\n",
     "        \n",
-    "measure_distances()   "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 89,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1000, 2)"
-      ]
-     },
-     "execution_count": 89,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 103,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[ 0.        ,  0.        ],\n",
-       "       [ 0.96554689,  0.50795581],\n",
-       "       [-0.72252522, -0.3499252 ],\n",
-       "       ...,\n",
-       "       [-2.01850292,  1.92301926],\n",
-       "       [-1.75851837,  1.94949978],\n",
-       "       [-2.30786934,  1.30828952]])"
-      ]
-     },
-     "execution_count": 103,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "data - centroid_positions_old[0,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.        , 1.09100866],\n",
-       "       [1.09100866, 0.        ],\n",
-       "       [0.80280155, 1.89355414],\n",
-       "       ...,\n",
-       "       [2.78789474, 3.30256837],\n",
-       "       [2.6254402 , 3.08197674],\n",
-       "       [2.65290075, 3.369835  ]])"
-      ]
-     },
-     "execution_count": 82,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "k = 2\n",
-    "distances_array = np.zeros((data.shape[0], k))\n",
-    "metric = \"l2\"\n",
-    "def measure_distances():\n",
-    "#     from numpy import linalg as LA\n",
+    "# measure_distances()   \n",
+    "\n",
+    "def calculate_new_positions():\n",
     "    \n",
     "    for idx_centroid in range(k):\n",
+    "        kth_subset = data[centroid_labels == idx_centroid]\n",
+    "        centroid_positions[idx_centroid,:] = scipy.ndimage.center_of_mass(kth_subset)\n",
     "        \n",
-    "        for idx_row in range(data.shape[0]):\n",
-    "            point = data[idx_row,:]\n",
+    "    return centroid_positions\n",
     "\n",
-    "            if metric == \"l2\":\n",
-    "                # calcualte Euclidean d\n",
-    "                distances_array[idx_row,idx_centroid] = np.linalg.norm(centroid_positions_old[idx_centroid,:] - point)\n",
-    "\n",
-    "            else :\n",
-    "                # calculate Manhatan d\n",
-    "                print(\"Métrique manhattan non prise en charge. Veuillez choisir : metric = 'l2'\")\n",
-    "                          \n",
-    "    return distances_array\n",
-    "            \n",
-    "#         for point in col\n",
-    "        \n",
-    "measure_distances()        "
+    "# calculate_new_positions()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[ 1.13979705, -0.94534292],\n",
-       "       [ 2.10534395, -0.43738712]])"
-      ]
-     },
-     "execution_count": 66,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.13979705 -0.94534292]\n",
+      " [ 2.10534395 -0.43738712]]\n",
+      "[[191.3688366   -0.38208563]\n",
+      " [ 26.89832873  -0.38208563]]\n",
+      "[[191.3688366   -0.38208563]\n",
+      " [ 26.89832873  -0.38208563]]\n"
+     ]
     }
    ],
    "source": [
+    "# Structure :\n",
+    "\n",
     "k = 2\n",
-    "centroid_positions_old = np.vstack([data[k,:] for k in range(k)])\n",
-    "centroid_positions_old"
+    "scaler=\"StandardScaler\"\n",
+    "metric=\"l2\"\n",
+    "decimals=3\n",
+    "\n",
+    "# def KMeans_scratch(data, k, scaler=\"StandardScaler\", metric=\"l2\", decimals=3):    \n",
+    "    \n",
+    "# option standard scaler\n",
+    "if scaler == \"StandardScaler\" :\n",
+    "    from sklearn.preprocessing import StandardScaler\n",
+    "    data = StandardScaler().fit_transform(data)\n",
+    "else:\n",
+    "    print (\"'Non-scaled' non pris en charge. Veuillez choisir : scaler='StandardScaler'\")\n",
+    "\n",
+    "# initial cluster positions = 2 first points of data\n",
+    "centroid_positions = np.vstack([data[k,:] for k in range(k)])\n",
+    "for_comparison = np.vstack([data[k,:] for k in range(k)])\n",
+    "\n",
+    "# create cluster's new positions array\n",
+    "# centroid_positions_new = np.empty((k, data.shape[1]))\n",
+    "\n",
+    "# initial distances = 0\n",
+    "distances_array = np.zeros((data.shape[0], k))\n",
+    "\n",
+    "# initial movement\n",
+    "C_static = False \n",
+    "\n",
+    "count = 0    \n",
+    "\n",
+    "while C_static == False:\n",
+    "    for_comparison = centroid_positions\n",
+    "\n",
+    "    # Calcul des distances : OK     \n",
+    "    distances_array = measure_distances() \n",
+    "\n",
+    "    # Labeliser les points : OK\n",
+    "    centroid_labels = np.argmin(measure_distances(), axis=1)\n",
+    "    print(for_comparison)\n",
+    "\n",
+    "    # calculer les positions des barycentres = nouveaux centroïdes : OK\n",
+    "    centroid_positions = calculate_new_positions()\n",
+    "    print(centroid_positions)\n",
+    "    print(for_comparison)\n",
+    "    \n",
+    "    # update C_movement variable : -----\n",
+    "    C_static = determine_C_movement(decimals)\n",
+    "\n",
+    "    count += 1\n",
+    "\n",
+    "# print(centroid_positions)\n",
+    "# print(np.bincount(centroid_labels))\n",
+    "# print(count)\n",
+    "\n",
+    "#     return centroid_positions_new, centroid_labels, count\n",
+    "    \n",
+    "# KMeans_scratch(data, 2, scaler=\"StandardScaler\", metric=\"l2\", decimals=3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 1.13979705, -0.94534292])"
-      ]
-     },
-     "execution_count": 78,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "centroid_positions_old[0,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 76,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       ...,\n",
-       "       [0., 0.],\n",
-       "       [0., 0.],\n",
-       "       [0., 0.]])"
-      ]
-     },
-     "execution_count": 76,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.zeros((data.shape[0], 2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def assign_centroids():"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def new_centroid_positions():"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 59,
-   "metadata": {},
+   "execution_count": 6,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -530,16 +301,30 @@
        "       [ 2.10534395, -0.43738712]])"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from sklearn.preprocessing import StandardScaler\n",
-    "data = StandardScaler().fit_transform(data)\n",
-    "np.vstack((data[0,:], data[1,:]))\n"
+    "np.vstack([data[k,:] for k in range(k)])"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
